--- a/css/melaati2.css
+++ b/css/melaati2.css
@@ -59,13 +59,16 @@ button{
     background: none;
     border: none;
     color: mediumseagreen;
+    /*font-size: larger;*/
+    font-family: 'Overpass Mono', monospace;
+
 }
 
 .navBar{
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     text-align: center;
-
+    /*font-size:20%*/
 }
 
 .containerGraphics{
